syntax = "proto3";

option go_package = "./blogpb";

service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {};
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {};
    rpc ListBlogs(ListBlogsRequest) returns (stream ListBlogsResponse) {};
}

message Blog {
    uint32 id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1;
}

message ReadBlogRequest {
    string title = 1;
    string author = 2;
}

message ReadBlogResponse {
    Blog blog = 1;
}

message UpdateBlogRequest {
    string title = 1;
    string author = 2;
    string content = 3;
}

message UpdateBlogResponse {
    Blog blog = 1;
}

message DeleteBlogRequest {
    string title = 1;
    string author = 2;
}

message DeleteBlogResponse {
    string confirmation = 1;
}

message ListBlogsRequest {

}

message ListBlogsResponse {
    Blog blog = 1;
}